--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <h1>Hello My Big Beautiful World!</h1>
+    <h1>Hello My Big World!</h1>
     <!-- <srcipt>
         alert(1);
     </script> -->
